# advent-of-code

./: .env.sample  .gitignore  README.md  input_loader.py  pyproject.toml  requirements.txt
2023/: 07.py  pyproject.toml  requirements.txt
2023/01/: solution.py  test_202301.py  test_solution.py  test_y23d01.py  y23d01.py
2023/02/: 202302.py  solution.py  test_day02.py  test_solution.py  test_y23d02.py  y23d02.py
2023/03/: day03.py  solution.py  test_202303.py  test_solution.py  test_y23d03.py  y23d03.py
2023/04/: solution.py  test_202304.py  test_solution.py  test_y23d04.py  y23d04.py
2023/05/: 202305.py  solution.py  test_202305.py  test_solution.py  test_y23d05.py  y23d05.py
2023/06/: solution.py  test_day06.py  test_solution.py  test_y23d06.py  y23d06.py
2023/07/: day07.py  solution.py  test_day07.py  test_solution.py  test_y23d07.py  y23d07.py
2023/08/: day08.py  test_202308.py  test_y23d08.py  y23d08.py
2023/09/: day09.py  test_day09.py  test_y23d09.py  y23d09.py
2023/10/: test_day10.py  test_y23d10.py  y23d10.py
2025/01/: day01.py  test_202501.py  test_y25d01.py  y25d01.py
2025/02/: test_y25d02.py  y25d02.py
2025/03/: test_y25d03.py  y25d03.py
2025/04/: test_y25d04.py  y25d04.py
2025/05/: test_y25d05.py  y25d05.py
2025/06/: test_y25d06.py  y25d06.py
2025/07/: test_y25d07.py  y25d07.py
2025/08/: test_y25d08.py  y25d08.py
y2023/d01/: solution.py  test_solution.py
y2023/d02/: solution.py  test_solution.py
y2023/d03/: solution.py  test_solution.py
y2023/d04/: solution.py  test_solution.py
y2023/d05/: solution.py  (+1 more)
(+4 files in other folders)
